feat: add CRUD resources for component type
